fixed spacing and margins

--- a/css/CIT230.css
+++ b/css/CIT230.css
@@ -13,7 +13,7 @@ body {
 *************************************/
 nav {
     background: #525252;
-    width: 110%;
+    width: 100%;
 }
 
 nav ul {
@@ -52,7 +52,7 @@ nav ul li.active, nav ul li:hover {
 *************************************/
 header {
     background: #0076c6;
-    margin: -1px -10px -10px -10px;
+    margin: 0px;
     padding: 15px;
     color: white;
 }
@@ -86,7 +86,7 @@ header > img {
 * MAIN CONTENT FORMATTING
 *************************************/
 div.main-content {
-    margin: 0 0 0 25px;
+    margin: 0 300px;
     padding-bottom: 15px;
 }
 
@@ -106,6 +106,12 @@ p, li, span, a {
 @media screen and (max-width: 375px) {
     div.grid-container img.item2 {
         width: 250px;
+    }
+}
+
+@media screen and (max-width: 1439px) {
+    div.main-content {
+        margin: 0 15px;
     }
 }
 
@@ -152,7 +158,7 @@ footer {
     background: #1a1a1d;
     color: white;
     padding: 10px;
-    margin: -15px;
+    margin: 0px;
 }
 
 footer > p > a:link,
